@@ -171,7 +171,7 @@ public class BasicRemotePeerRegistry implements IRemotePeerRegistry {
     if (currentIndex != null) {
       idIndex = currentIndex.intValue() + 1;
     }
-    automationIndices.put(seed, new Integer(idIndex));
+    automationIndices.put(seed, Integer.valueOf(idIndex));
     if (idIndex > 0) {
       return new StringBuffer(seed).append("#").append(idIndex).toString();
     }
